--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -20,6 +20,11 @@
 
     .option {
       padding: 10px 15px;
+      border: none;
+      background: none;
+      font-family: "Open Sans Condensed";
+      font-size: 16px;
+      cursor: pointer;
     }
   }
 }
