--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -13,6 +13,8 @@
   font-weight: bolder;
   border: none;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
 
   &:hover {
     background-color: white;
@@ -24,6 +26,18 @@
     background-color: #4285f4;
     &:hover {
       background-color: #357ae8;
+      color: white;
+      border: none;
+    }
+  }
+
+  &.inverted {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+
+    &:hover {
+      background-color: black;
       color: white;
       border: none;
     }
