added logo text

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -7,8 +7,14 @@
 
   .logo-container {
     height: 100%;
-    width: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding: 25px;
+
+    .logo-text {
+      padding-left: 30px;
+    }
   }
 
   .options {
